# monpoly

./: .gitignore  Jenkinsfile  dune-project  libmonpoly.opam  monpoly-dev.opam  tags
ci/: Dockerfile  compile.sh
examples/: formula.mfotl
src/: MFOTL.ml  MFOTL.mli  algorithm.ml  algorithm_verified.ml  algorithm_verified.mli  cppmon.ml  cppmon.mli  dune  explicitmon.ml  explicitmon.mli  extformula.ml  extformula.mli  filter_empty_tp.ml  formula_parser.mly  formula_serialize.ml  formula_serialize.mli  log.ml  log_parser.ml  log_parser.mli  main.ml  marshalling.ml  mformula.ml  mformula.mli  misc.ml  misc.mli  optimized_mtl.ml  optimized_mtl.mli  perf.ml  predicate.ml  relation.ml  rewriting.ml  rewriting.mli  socket_input.ml  socket_input.mli  splitting.ml  tuple.ml  tuple.mli  verified.ml  verified_adapter.ml  verified_adapter.mli
thys/: ROOTS
thys/MFODL_Monitor_Devel/: Sat.thy
tools/: formula_generator.ml  formula_generator.mli  formula_stats.ml  gen_fma.ml
tools/gen_fmla/: dune  formula_generator.ml  formula_generator.mli
