(library
  (name libmonpoly)
  (preprocess (staged_pps ppx_yojson_conv))
  (public_name libmonpoly)
  (libraries str unix zarith ctypes)
  (modules (:standard \ Main Main_js)))

(executable
  (name main)
  (public_name monpoly)
  (package monpoly)
  (libraries libmonpoly dune-build-info)
  (modules Main))

(ocamllex formula_lexer log_lexer)
(ocamlyacc formula_parser)
